Fixed logo on mobile

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -15,6 +15,13 @@
         height: 60px;
         transition: all .5s;
         background-color: rgba($color-black, .9);
+        .header__logo-box {
+            height: 40px;
+            width: 40px;
+            img {
+                width: 100%;
+            }
+        }
     }
 }
 
